lal concha de la lora

--- a/src/app/pages/armario/armario.component.html
+++ b/src/app/pages/armario/armario.component.html
@@ -86,7 +86,7 @@
 
       <!-- Tags/Etiquetas con colores -->
       <div class="flex flex-wrap gap-2 mb-4">
-        <span class="px-3 py-1 bg-[#e8e1d5] bg-stone-200 text-stone-800 text-xs sm:text-sm rounded-full font-medium"> {{cloth.estacion}} </span>
+        <span class="px-3 py-1 bg-warm-200 bg-[#e8e1d5] text-stone-800 text-xs sm:text-sm rounded-full font-medium"> {{cloth.estacion}} </span>
         <span class="px-3 py-1 bg-warm-200 bg-violet-100 text-stone-800 text-xs sm:text-sm rounded-full font-medium"> {{cloth.patron}}</span>
         <span class="px-3 py-1 bg-warm-200 bg-sky-100 text-stone-800 text-xs sm:text-sm rounded-full font-medium"> {{cloth.estilo}} </span>
       </div>
