--- a/src/app/pages/favorito/favorito.component.html
+++ b/src/app/pages/favorito/favorito.component.html
@@ -444,7 +444,7 @@
 
               <!-- Información del outfit -->
               <div class="p-4">
-                <h3 class="text-lg font-semibold text-warm-800 mb-2">{{outfit.id}}</h3>
+<!--                <h3 class="text-lg font-semibold text-warm-800 mb-2">{{outfit.id}}</h3>-->
                 <div class="flex flex-wrap gap-2 mb-3">
                   <span class="px-3 py-1 bg-warm-200 bg-[#e8e1d5] text-stone-800 text-xs rounded-full">{{outfit.outfit.length}} prendas</span>
                   <span
