--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -104,12 +104,13 @@
       <div class="bg-white/50 rounded-2xl p-8 shadow-xl backdrop-blur-sm border border-[#d4c9b8]">
         <div class="aspect-video bg-gradient-to-br from-[#f9f6f1] to-[#e8e0d4] rounded-xl flex items-center justify-center">
           <div class="text-center">
-            <svg xmlns="http://www.w3.org/2000/svg" class="w-16 h-16 text-[#8b8680] mx-auto mb-4" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-              <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>
-              <circle cx="9" cy="9" r="2"></circle>
-              <path d="M21 15l-3.086-3.086a2 2 0 0 0-2.828 0L6 21"></path>
-            </svg>
-            <p class="text-[#8b8680] font-light">Vista previa de la aplicación</p>
+<!--            <svg xmlns="http://www.w3.org/2000/svg" class="w-16 h-16 text-[#8b8680] mx-auto mb-4" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">-->
+<!--              <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>-->
+<!--              <circle cx="9" cy="9" r="2"></circle>-->
+<!--              <path d="M21 15l-3.086-3.086a2 2 0 0 0-2.828 0L6 21"></path>-->
+<!--            </svg>-->
+            <img src="/previsualizacionLanding.png">
+<!--            <p class="text-[#8b8680] font-light">Vista previa de la aplicación</p>-->
           </div>
         </div>
       </div>
